[package]
name = "serde-single-key-map"
version = "0.1.0"
authors = ["messense <messense@icloud.com>"]
description = "Unwrap a single key map with serde"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/serde-single-key-map.git"

[dependencies]
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
